# plantswap

./: .gitignore
FastAPI/: crud.py  database.py  main.py  models.py  plants.db  pyproject.toml  schemas.py
React/: README.md  index.html  package-lock.json  package.json
React/src/: App.jsx  api.jsx  index.css  main.jsx
React/src/components/: Available.jsx  Dashboard.jsx  FilterButton.jsx  Login.jsx  Navbar.jsx  Register.jsx  Requested.jsx  useToken.jsx
React/src/styles/: navbar.css
