[tool.poetry]
name = "plant_swap"
version = "0.1.0"
description = ""
authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.1"
SQLAlchemy = "2.0.20"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
pydantic = "2.3.0"
python-jose = "^3.3.0"
cryptography = "^41.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
